module 1 assignment complete

--- a/module1-Intro-to-Neural-Networks/LS_DS_421_Intro_to_NN_Lecture.ipynb
+++ b/module1-Intro-to-Neural-Networks/LS_DS_421_Intro_to_NN_Lecture.ipynb
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -216,7 +216,7 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
+       "      <td>0</td>\n",
        "      <td>2104</td>\n",
        "      <td>399.9</td>\n",
        "      <td>379</td>\n",
@@ -224,7 +224,7 @@
        "      <td>449</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
+       "      <td>1</td>\n",
        "      <td>1600</td>\n",
        "      <td>329.9</td>\n",
        "      <td>288</td>\n",
@@ -232,7 +232,7 @@
        "      <td>1756</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
+       "      <td>2</td>\n",
        "      <td>2400</td>\n",
        "      <td>369.0</td>\n",
        "      <td>432</td>\n",
@@ -250,7 +250,7 @@
        "2  2400           369.0          432         -63          3969"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -769,7 +769,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 1,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -789,6 +789,29 @@
     "])\n",
     "\n",
     "correct_outputs = [[0], [1], [1], [0]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0, 0, 1],\n",
+       "       [1, 1, 1],\n",
+       "       [1, 0, 1],\n",
+       "       [0, 1, 1]])"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "inputs"
    ]
   },
   {
@@ -888,7 +911,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -898,12 +921,12 @@
     {
      "data": {
       "text/plain": [
-       "array([[-0.50998644],\n",
-       "       [-0.30403483],\n",
-       "       [ 0.63392056]])"
+       "array([[ 0.0099616 ],\n",
+       "       [ 0.21185521],\n",
+       "       [-0.08502562]])"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -925,7 +948,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 7,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -935,19 +958,38 @@
     {
      "data": {
       "text/plain": [
-       "array([[ 0.63392056],\n",
-       "       [-0.1801007 ],\n",
-       "       [ 0.12393412],\n",
-       "       [ 0.32988574]])"
+       "(4, 3)"
       ]
      },
-     "execution_count": 49,
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(3, 1)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[-0.08502562],\n",
+       "       [ 0.13679119],\n",
+       "       [-0.07506402],\n",
+       "       [ 0.12682959]])"
+      ]
+     },
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "weighted_sum = np.dot(inputs, weights)\n",
+    "display(inputs.shape, weights.shape)\n",
     "weighted_sum"
    ]
   },
@@ -1750,9 +1792,9 @@
    "version": "0.3.2"
   },
   "kernelspec": {
-   "display_name": "U4-S2-NNF (Python 3.7)",
+   "display_name": "tnf",
    "language": "python",
-   "name": "u4-s2-nnf"
+   "name": "tensorflow"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1764,7 +1806,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.4"
   },
   "toc-autonumbering": false,
   "toc-showcode": false,
